--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^7.2||^8.2",
+        "cloudinary-labs/cloudinary-laravel": "^2.1",
         "defuse/php-encryption": "^2.4",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
